# 3d-converter-py

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
convert3d/: __main__.py  cli.py  main.py
convert3d/utils/: logger.py
src/convert3d/: __main__.py  cli.py  convert.py  gui.py  main.py
src/convert3d/utils/blender/: __init__.py
tests/sample_objects/: squares.dae  squares.dae.abc  squares.dae.blend  squares.dae.fbx  squares.dae.glb  squares.dae.mtl  squares.dae.ply  squares.dae.stl  squares.dae.usdc
